SEBSLI-9 store admin pw in db + expose endpoint in ssl mode + remove admin pw after pw change